# Quick-Start-Embedded

./: README.md
CubeMX+VScode/: README.md
CubeMX+VScode/helloWord/: .mxproject  Makefile  helloWord.ioc
CubeMX+VScode/helloWord/Core/Src/: gpio.c  main.c
CubeMX_VScode/helloWord/Core/Src/: gpio.c
CubeMX_VScode/helloWord/myLib/myInc/: myInc.h
CubeMX_VScode/helloWord/myLib/mySrc/: mySrc.c
Debuggers_Programmers/: README.md
IcarusVerilog_VScode/: Makefile  README.md
IcarusVerilog_VScode/simulation/src/: logicFnct.v
IcarusVerilog_VScode/simulation/tb/: logicFnct_tb.v
Quartus_Terminal/: README.md
Rust_VScode/: .gitignore  README.md
Rust_VScode/example-embedded-hal/stm32f411vet6/: Cargo.toml  memory.x
Rust_VScode/example-embedded-hal/stm32f411vet6/.cargo/: config
Rust_VScode/example-embedded-hal/stm32f411vet6/src/: main.rs
